--- a/client/package.json
+++ b/client/package.json
@@ -9,13 +9,18 @@
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.1",
     "react-dom": "^17.0.2",
+    "react-multi-carousel": "^2.6.5",
     "react-redux": "^7.2.6",
+    "react-responsive-carousel": "^3.2.22",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-slick": "^0.28.1",
     "react-validation": "^3.0.7",
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.0",
+    "slick-carousel": "^1.8.1",
     "validator": "^13.6.0",
     "web-vitals": "^1.1.2"
   },
